[package]
name = "lightning-persister"
version = "0.0.104"
authors = ["Valentine Wallace", "Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightningdevkit/rust-lightning/"
description = """
Utilities to manage Rust-Lightning channel data persistence and retrieval.
"""

[dependencies]
bitcoin = "0.27.1"
lightning = "0.0.104"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }